# goianinha-compiler

./: .gitignore  CMakeLists.txt  README.md  lex.l
examples/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  8.txt  9.txt
examples/lexical/: car_const.txt  car_const_invalidos.txt  ids.txt  ids_invalidos.txt  int_const.txt  str_const_invalidos.txt
examples/mips/: conditions.txt  consts.txt  expressions.txt  functions.txt  global.txt  loops.txt  read_write.txt  return.txt  variables.txt
examples/semantic/: a.txt  calling_function_with_wrong_parameter.txt  conditions.txt  functions.txt  loop.txt  mixed_types_in_expression.txt  repeated_names.txt  undeclared_parameter.txt  undecleared_variable.txt  wrong_type_in_assignment.txt
examples/syntactic/: assignment.txt  basic.txt  conditions.txt  expressions.txt  factorial.txt  function.txt  função.txt  global_vars.txt  loop.txt  test.txt  vars.txt
include/: abstract_syntax_tree.hpp  error.hpp  function.hpp  lexical_analyzer.hpp  mips_generator.hpp  node.hpp  scope.hpp  scope_stack.hpp  semantic_analyzer.hpp  syntactic_analyzer.hpp  token_type.hpp  variable.hpp
src/: function.cpp  lexer.l  lexical_analyzer.cpp  main.cpp  scope.cpp  scope_stack.cpp  semantic_analyzer.cpp  syntactic.y  test_ast.cpp  test_lexical_analyzer.cpp  test_scope_stack.cpp  test_script.py  test_semantic_analyzer.cpp  test_syntactic_analyzer.cpp  token_type.cpp  variable.cpp
src/lib/: abstract_syntax_tree.cpp  error.cpp  function.cpp  lexer.l  lexical_analyzer.cpp  mips_generator.cpp  node.cpp  scope.cpp  scope_stack.cpp  semantic_analyzer.cpp  syntactic.y  syntactic_analyzer.cpp  token_type.cpp  variable.cpp
tests/correct/: FibEfatCorreto.g  FibEfatCorretoVersao2.g  NotaEmConceito.g  SeqOrdenada.g  expressao1Correto.g  fatorialCorreto.g  variaveisGlobaisVariaveisFuncoesCorreto.g
tests/incorrect/: FibEfatCorretoVersao2.g  FibEfatErroBlocoEnquantoNaoTerminaLin30.g  FibEfatErroBlocoEnquantoNaoTerminaLin49.g  FibEfatErroCarEIntNaEprLin8g.g  FibEfatErroTIposDiferentesExpEnquntoLin30.g  FibEfatVersao2ErroAtribuicaoVarDeTipoDiferenteDaExpressaoLin22.g  NotaEmConceitoErroSenaoSemSeLin25.g  erroLin6Caractereinvalido.g  fatorialErroLin3NomeDeclaradoNoMesmoEscopo.g  fatorialErroLin5TipoRetornado.g  semantico_fatorialErroLin4TipoRetornado.g
